--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@prisma/client": "^5.3.1",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "prisma": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -22,7 +23,6 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
-    "prisma": "^5.3.1",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
